--- a/index.html
+++ b/index.html
@@ -17,29 +17,85 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="recent" class="anchor" href="#recent" aria-hidden="true">
+  <span aria-hidden="true" class="octicon octicon-link"></span></a>
+  Recent</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Lah</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="older" class="anchor" href="#older" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+Past GB articles</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h4>On Tags and Hashtags</h4>
+<ul>
+  <li><a href="https://medium.com/@georgebaily/forget-hashtags-for-a-moment-most-sites-still-arent-taking-advantage-of-any-tag-functionality-974b85ab777d#.zicjpo28g">Forget Hashtags for a Moment: Most Sites Still Aren’t Taking Advantage of ANY Tag Functionality…</a></li>
+  <li><a href="https://medium.com/@georgebaily/right-and-wrong-ways-to-hashtag-on-twitter-8a66bb6588e#.g8tgnvkw0">Right and Wrong Ways to #Hashtag on Twitter</a></li>
+  <li><a href="https://medium.com/@georgebaily/how-to-leverage-twitter-at-business-conferences-a75050e52f4c#.c9bfvapdx">How To Leverage Twitter At Business Conferences</a></li>
+</ul>
+
+<h4>Marketing Theory and Practice</h4>
+<ul>
+  <li><a href="https://medium.com/i-m-h-o/rule-2-of-all-marketing-5964782d6f6a#.d9dt13edd">Rule 2 of All Marketing</a></li>
+  <li><a href="https://medium.com/@georgebaily/12-uncomfortable-contradictions-of-seo-95e845e27370#.8i5tewgg6">12 Uncomfortable Contradictions of SEO </a></li>
+  <li><a href="https://medium.com/@georgebaily/advice-for-staff-member-assigned-to-content-marketing-for-a-startup-with-zero-budget-83e422786d67#.r89dkpev1">Advice for Staff Member Assigned to Content Marketing for a Startup with Zero Budget</a></li>
+</ul>
+
+<h4>Business Theory and Practice</h4>
+<ul>
+  <li><a href="https://medium.com/@georgebaily/a-checklist-of-11-business-strategy-points-derived-from-11-rules-for-creating-value-in-the-social-dcbcebf5fb7#.2kf73qjmk">A Checklist of 11 Business Strategy Points derived from “11 Rules for Creating Value in the Social Era”</a></li>
+  <li><a href="https://medium.com/@georgebaily/how-customer-support-done-right-fuels-improvement-throughout-the-business-91c20c29e9ff#.a44pyxlbn">How Customer Support, Done Right, Fuels Improvement Throughout The Business</a></li>
+</ul>
+
+<h4>Future</h4>
+<ul>
+  <li><a href="https://medium.com/@georgebaily/lets-try-to-understand-and-work-with-the-digital-revolution-in-terms-of-human-factors-not-d71841181633#.tsb7ewlt5">Let’s Try To Understand and Work With the “Digital Revolution” in Terms of Human Factors, Not Technology</a></li>
+  <li><a href="https://medium.com/@georgebaily/20-predictions-for-the-next-10-years-of-the-it-industry-19a5d9bc078#.72vp77rs2">20 predictions for the next 10 years of the IT industry</a></li>
+  <li><a href="https://medium.com/@georgebaily/stumbling-into-computing-abundance-77b3e3c9ef4b#.1zifus4s6">Stumbling into Computing Abundance</a></li>
+  <li><a href="https://medium.com/@georgebaily/self-driving-cars-cannot-do-these-things-3d143f0cedb9#.d3ba71529">Self-Driving Cars Cannot Do These Things</a></li>
+  <li><a href="https://medium.com/@georgebaily/reality-check-for-the-robot-revolution-1913f8d439c4#.26enub6t0">Reality Check for the Robot Revolution</a></li>
+
+</ul>
+
+<h4>Satire</h4>
+<ul>
+  <li><a href="https://medium.com/@georgebaily/hashtag-jacking-events-for-increased-twitter-exposure-fc2865b6bee#.cj1g61sq6">Hashtag-jacking events</a></li>
+  <li><a href="https://medium.com/facebook-insights/if-google-seo-rules-applied-to-facebook-e726c67df926#.1624r1m0c">If Google SEO “rules” applied to Facebook…</a></li>
+  <li><a href="https://medium.com/@georgebaily/mission-statement-who-the-hell-talks-like-that-lots-of-people-actually-432c8a46e70c#.dw1gglxmn">“Mission Statement” — Who the hell talks like that? — Lots of people, actually.</a></li>
+  <li><a href="https://medium.com/@georgebaily/some-job-titles-decoded-advice-for-job-hunters-a2984c675cb6#.9hmvqui8y">Some Job Titles Decoded — Advice for Job Hunters</a></li>
+  <li><a href="https://medium.com/i-m-h-o/top-10-signs-your-child-may-be-gifted-107d2ff0dbf6#.zfocwpxq5">Top 10 Signs Your Child May Be Gifted</a></li>
+  <li><a href="https://medium.com/@georgebaily/10-digital-new-year-s-resolutions-for-the-people-who-are-annoying-me-4496e91a8d5f#.cyb2u997q">10 Digital New Year’s Resolutions For The People Who Are Annoying Me</a></li>
+</ul>
+
+<h4>China</h4>
+<ul>
+  <li><a href="https://medium.com/@georgebaily/chinese-new-years-eve-tomb-attendance-f55e21aee213#.xuxrcttp5">Chinese New Year’s Eve Tomb Attendance</a></li>
+  <li><a href="https://medium.com/@georgebaily/the-top-10-most-dangerous-chinese-home-fireworks-fba533a1e3f7#.e8dn6n8ro">The Top 10 Most Dangerous Chinese Home Fireworks</a></li>
+</ul>
+  
+<h3>
+<a id="kp" class="anchor" href="#kp" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+KnowledgePower articles</h3>
+
+<h4>Marketing theory</h4>
+<ul>
+  <li><a href="#"></a></li>
+</ul>
+
+<h4>Misc</h4>
+<ul>
+  <li><a href="#"></a></li>
+</ul>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="links" class="anchor" href="#links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+Links</h3>
+<ul>
+  <li><a href="https://twitter.com/georgebaily">@georgebaily on Twitter</a></li>
+  <li><a href="https://www.georgebaily.com/singularity-news/">Singularity news</a></li>
+  <li><a href="https://medium.com/@georgebaily/">Various past articles published on Medium</a></li>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+</ul>
 
       <footer class="site-footer">
 
