--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@ Past GB articles</h3>
   <li><a href="https://medium.com/i-m-h-o/rule-2-of-all-marketing-5964782d6f6a#.d9dt13edd">Rule 2 of All Marketing</a></li>
   <li><a href="https://medium.com/@georgebaily/12-uncomfortable-contradictions-of-seo-95e845e27370#.8i5tewgg6">12 Uncomfortable Contradictions of SEO </a></li>
   <li><a href="https://medium.com/@georgebaily/advice-for-staff-member-assigned-to-content-marketing-for-a-startup-with-zero-budget-83e422786d67#.r89dkpev1">Advice for Staff Member Assigned to Content Marketing for a Startup with Zero Budget</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/1FHewhS8uQ6">the biggest mistake in #ContentMarketing  is to expect a marketer to create good content</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/W1nkNZbaUKy">Thoughts on Avinash Kaushik "Objectives / Goals / Metrics" definitions blog post</a></li>
+  <li><a href="#"></a></li>
+  <li><a href="#"></a></li>
 </ul>
 
 <h4>Business Theory and Practice</h4>
@@ -54,7 +58,8 @@ Past GB articles</h3>
   <li><a href="https://medium.com/@georgebaily/stumbling-into-computing-abundance-77b3e3c9ef4b#.1zifus4s6">Stumbling into Computing Abundance</a></li>
   <li><a href="https://medium.com/@georgebaily/self-driving-cars-cannot-do-these-things-3d143f0cedb9#.d3ba71529">Self-Driving Cars Cannot Do These Things</a></li>
   <li><a href="https://medium.com/@georgebaily/reality-check-for-the-robot-revolution-1913f8d439c4#.26enub6t0">Reality Check for the Robot Revolution</a></li>
-
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/hK4fb3JGtxR">Open source dissolving businesses</a></li>
+  <li><a href="#"></a></li>
 </ul>
 
 <h4>Satire</h4>
@@ -65,12 +70,54 @@ Past GB articles</h3>
   <li><a href="https://medium.com/@georgebaily/some-job-titles-decoded-advice-for-job-hunters-a2984c675cb6#.9hmvqui8y">Some Job Titles Decoded — Advice for Job Hunters</a></li>
   <li><a href="https://medium.com/i-m-h-o/top-10-signs-your-child-may-be-gifted-107d2ff0dbf6#.zfocwpxq5">Top 10 Signs Your Child May Be Gifted</a></li>
   <li><a href="https://medium.com/@georgebaily/10-digital-new-year-s-resolutions-for-the-people-who-are-annoying-me-4496e91a8d5f#.cyb2u997q">10 Digital New Year’s Resolutions For The People Who Are Annoying Me</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/UMZkGjtj7Pn">5 Surprising Discoveries of Neuro-Neuropathology</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/gaSZeyenvX6">Clickbait scientific discoveries</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/EbMcAmfZbQ6">Cis- things</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/QxhVcW6wvfq">#DevOps your job title!</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/A33E4WaFZ3m"> "New startup aims to:"</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/A25hcJ2UTRH">Passive aggressive programmer antipattern</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/hPVFH6mj7wZ">Useful passive aggressive idea when asked to create KPI reports</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/bpBupWa2Sd8">#Productivity  guide to the week</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/hq1atpvRcgq">Internet marketing client/provider expectations</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/QEax71SvoX4">Facebook: with apologies to George Herbert</a></li>
+  <li><a href="#"></a></li>
+  <li><a href="#"></a></li>
 </ul>
 
 <h4>China</h4>
 <ul>
   <li><a href="https://medium.com/@georgebaily/chinese-new-years-eve-tomb-attendance-f55e21aee213#.xuxrcttp5">Chinese New Year’s Eve Tomb Attendance</a></li>
   <li><a href="https://medium.com/@georgebaily/the-top-10-most-dangerous-chinese-home-fireworks-fba533a1e3f7#.e8dn6n8ro">The Top 10 Most Dangerous Chinese Home Fireworks</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/4Lh65KAfPA1">5 things I'd not previously realized about China's "Great Cannon" DDoS attack system</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/PcnFHN7wxNp">Mind-mapping all the different businesses under Alibaba</a></li>
+  <li><a href="#"></a></li>
+</ul>
+
+<h4>Comment / thought / rant</h4>
+<ul>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/5kmWEMB4pbB">Stop with the boasting about being up early﻿</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/iy2cAfSUwGu">A typical team<->management<->development workflow to get from software bug/enhancement/feature to a result</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/6zPcEiPC1Xc">"I want to write a book" bears absolutely no relevance to "a publisher would like to publish your book" let alone "readers would like to buy this book".</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/3vd48UQ2K6D">Managers are usually in that position by accident</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/fEV7FKq7zjk">"You worry too much"</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/iQ11Unr3U8s">Demonstrating/protesting in the streets, or public acts of resistance: there are three dimensions involved</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/Zk1JojgoV5d">Academic course design</a></li>
+  <li><a href="#"></a></li>
+
+</ul>
+
+<h4>Odyssey Edge</h4>
+<ul>
+  <li><a href="http://odysseyedge.com/qing-dynasty-timeline/">Qing Dynasty Timeline + Events During the Qing Dynasty</a></li>
+  <li><a href="http://odysseyedge.com/timeline-of-minimalist-composers/">Timeline of Minimalist Composers</a></li>
+  <li><a href="http://odysseyedge.com/atomic-bombing-of-hiroshima-and-nagasaki-root-questions/">Atomic Bombing of Hiroshima and Nagasaki: Root Questions…</a></li>
+  <li><a href="http://odysseyedge.com/gallery-paintings-for-55-days-at-peking-by-dong-kingman/">Gallery: Paintings for “55 Days at Peking” by Dong Kingman</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/UDuAYZYALJF">list of early American authors in chronological order of birth date</a></li>
+
+</ul>
+<h4>Resources</h4>
+<ul>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/4URDxrEyCVT">List of 2,803 TLDs and public registrable subdomains</a></li>
 </ul>
   
 <h3>
