--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@ Past GB articles</h3>
   <li><a href="https://medium.com/@georgebaily/advice-for-staff-member-assigned-to-content-marketing-for-a-startup-with-zero-budget-83e422786d67#.r89dkpev1">Advice for Staff Member Assigned to Content Marketing for a Startup with Zero Budget</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/1FHewhS8uQ6">the biggest mistake in #ContentMarketing  is to expect a marketer to create good content</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/W1nkNZbaUKy">Thoughts on Avinash Kaushik "Objectives / Goals / Metrics" definitions blog post</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/eFyY8XNT25H">marketing follows profitable products and systems, not the other way round</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/X4Nn9kTsiyE">critique of the top 5 UK broadband comparision sites' landing pages (2014)</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/irDwmnaCHpK">A holistic theory of SEO</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/4WTpU58pkH5">Content marketing strategy (2013)</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/WCsg763EJWT">Good social media marketing examples are usually just talking about ad budget</a></li>
   <li><a href="#"></a></li>
   <li><a href="#"></a></li>
 </ul>
@@ -59,6 +64,7 @@ Past GB articles</h3>
   <li><a href="https://medium.com/@georgebaily/self-driving-cars-cannot-do-these-things-3d143f0cedb9#.d3ba71529">Self-Driving Cars Cannot Do These Things</a></li>
   <li><a href="https://medium.com/@georgebaily/reality-check-for-the-robot-revolution-1913f8d439c4#.26enub6t0">Reality Check for the Robot Revolution</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/hK4fb3JGtxR">Open source dissolving businesses</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/8jkS3kx3teK">Digital brain blur examples</a></li>
   <li><a href="#"></a></li>
 </ul>
 
@@ -80,7 +86,7 @@ Past GB articles</h3>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/bpBupWa2Sd8">#Productivity  guide to the week</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/hq1atpvRcgq">Internet marketing client/provider expectations</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/QEax71SvoX4">Facebook: with apologies to George Herbert</a></li>
-  <li><a href="#"></a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/RmKYzR5iJPH">LGBTSUAVvP3!n/a</a></li>
   <li><a href="#"></a></li>
 </ul>
 
@@ -90,6 +96,7 @@ Past GB articles</h3>
   <li><a href="https://medium.com/@georgebaily/the-top-10-most-dangerous-chinese-home-fireworks-fba533a1e3f7#.e8dn6n8ro">The Top 10 Most Dangerous Chinese Home Fireworks</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/4Lh65KAfPA1">5 things I'd not previously realized about China's "Great Cannon" DDoS attack system</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/PcnFHN7wxNp">Mind-mapping all the different businesses under Alibaba</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/9GaLjMXG6jv">Infographic: 3rd Plenum of the 18th Central Committee of the CCP</a></li>
   <li><a href="#"></a></li>
 </ul>
 
@@ -98,10 +105,13 @@ Past GB articles</h3>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/5kmWEMB4pbB">Stop with the boasting about being up early﻿</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/iy2cAfSUwGu">A typical team<->management<->development workflow to get from software bug/enhancement/feature to a result</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/6zPcEiPC1Xc">"I want to write a book" bears absolutely no relevance to "a publisher would like to publish your book" let alone "readers would like to buy this book".</a></li>
-  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/3vd48UQ2K6D">Managers are usually in that position by accident</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/4EZU9uaagyQ"> Spot the problem no one is tackling in the publishing world... ﻿ <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/3vd48UQ2K6D">Managers are usually in that position by accident</a></li>
+  </a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/fEV7FKq7zjk">"You worry too much"</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/iQ11Unr3U8s">Demonstrating/protesting in the streets, or public acts of resistance: there are three dimensions involved</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/Zk1JojgoV5d">Academic course design</a></li>
+  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/75MeZLNk48H">Most investment advice goes like this:</a></li>
+  <li><a href="#"></a></li>
   <li><a href="#"></a></li>
 
 </ul>
