static home page link identity

--- a/empty-page.html
+++ b/empty-page.html
@@ -16,7 +16,7 @@
       <h2 class="project-tagline">George Baily articles etc</h2>
     </section>
     <section class="nav">
-	<p><a href="https://georgebaily.github.io/">&laquo; Home</a></p>
+	<p><a href="https://georgebaily.github.io/">&laquo; Home: @georgebaily on GitHub</a></p>
 	</section>
     <section class="main-content">
       <h3>
