number commandments duh

--- a/good-web-page-commandments.html
+++ b/good-web-page-commandments.html
@@ -20,31 +20,31 @@
 	</section>
     <section class="main-content">
 		<blockquote>Ten basic UX principles for creating (or auditing) web pages, with an emphasis on business web page producers, who easily drift into default "we us our" boring sales mode.</blockquote>
-      <h3 id="one">Mobile friendly</h3>
+      <h3 id="one">1. Mobile friendly</h3>
 		<ul>
 			<li>I can consume the content easily on a small mobile screen</li>
 			<li>I can complete navigation and forms on mobile</li>
 			<li>I can read any downloads, slideshows, and text in videos on my tiny screen</li>
 		</ul>
-      <h3 id="two">Fast loading</h3>
+      <h3 id="two">2. Fast loading</h3>
 		<ul>
 			<li>I do not have a chance to notice the page is loading slow</li>
 			<li>I am not downloading MBs of stuff I didn't ask for</li>
 		</ul>
-      <h3 id="three">Clear point</h3>
+      <h3 id="three">3. Clear point</h3>
 		<ul>
 			<li>I know what the page is about</li>
 			<li>So that I can judge easily if it matches the reason I came here</li>
 			<li>and there is nothing substantially distracting me from getting what I want here</li>
 		</ul>
-      <h3 id="four">Single page view is sufficient</h3>
+      <h3 id="four">4. Single page view is sufficient</h3>
 		<ul>
 			<li>I can get the main part of what I need from this page only</li>
 			<li>I don't need to go to the homepage </li>
 			<li>I'll view inner pages, linked from here, if I want to get more info on particular topics</li>
 			<li> Since I mainly get what I want from single pages, I don't notice or care if a lot of information is duplicated across many pages of this site</li>
 		</ul>
-      <h3 id="five">Skimmable</h3>
+      <h3 id="five">5. Skimmable</h3>
 		<ul>
 			<li>As a person with gnat-like attention powers, I can successfully skim the page and:
 			<br/>a) satisfy myself of the point of the page (3)
@@ -52,7 +52,7 @@
 			<br/>c) know where to pause or navigate after I've found what I am interested in
 			<br/>d) find pictures and video that spare me the pain of reading text</li>
 		</ul>
-      <h3 id="six">Where next</h3>
+      <h3 id="six">6. Where next</h3>
 		<ul>
 			<li>It's obvious what I can do next, and how to do it</li>
 			<li>I am not paralyzed or confused by multiple calls to action</li>
@@ -60,24 +60,24 @@
 			<li>(But if I actually want to do that, it is super easy to do it)</li>
 			<li>(And all the rest of the time, there is something that helps me with where I am right now)</li>
 		</ul>
-      <h3 id="seven">Voice</h3>
+      <h3 id="seven">7. Voice</h3>
 		<ul>
 			<li>It's clear to me who is talking to me from this page</li>
 			<li>I can see it's {your brand here} and I can sort of get who they are within my single page (4) skim (5)</li>
 			<li>I like a person talking to me rather than a brand</li>
 			<li>I like seeing real {your brand here} people and real {your brand here} things</li>
 		</ul>
-      <h3 id="eight">Something is memorable</h3>
+      <h3 id="eight">8. Something is memorable</h3>
 		<ul>
 			<li>When a fellow gnat interrupts me and asks watcha lookin at, I know how to summarize what I was looking at because I remember the main point </li>
 			<li>Stories are good for this</li>
 		</ul>
-      <h3 id="nine">Retrievable</h3>
+      <h3 id="nine">9. Retrievable</h3>
 		<ul>
 			<li>When I later recall that thing I saw / watched / heard, I know how to find my way back to it</li>
 			<li>This might be via a memorable word which is in the page and in the meta title, hence easy to find in my web history or bookmarks</li>
 		</ul>
-      <h3 id="one">h3 one</h3>
+      <h3 id="one">10. Relevant</h3>
 		<ul>
 			<li>The people (7) who produced this page about which I remember this key thing (8) seem like experts to me because they really talk to my...
 			<br/>...interest
