--- a/good-web-page-commandments.html
+++ b/good-web-page-commandments.html
@@ -19,6 +19,11 @@
 	<p><a href="https://georgebaily.github.io/">&laquo; Home: @georgebaily on GitHub</a></p>
 	</section>
     <section class="main-content">
+	
+		<figure><img src="images/george-web-commandments-by-jack.jpg" alt="george as moses with commandments tablets" />
+		<figcaption>web commandments George by @JackDElshaw</figcaption>
+		</figure>
+	
 		<blockquote>Ten basic UX principles for creating (or auditing) web pages, with an emphasis on business web page producers, who easily drift into default "we us our" boring sales mode.</blockquote>
       <h3 id="one">1. Mobile friendly</h3>
 		<ul>
