--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <span aria-hidden="true" class="octicon octicon-link"></span></a>
   Recent</h3>
 
-<p>Lah</p>
-
+<p><a href="https://georgebaily.github.io/good-web-page-commandments.html">10 Commandments of Good Commercial Web Pages</a> (2016 09 04)</p>
+<hr />
 <h3>
 <a id="older" class="anchor" href="#older" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 Past GB articles</h3>
