add links to past knowledgepower articles

--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@ Past GB articles</h3>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/irDwmnaCHpK">A holistic theory of SEO</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/4WTpU58pkH5">Content marketing strategy (2013)</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/WCsg763EJWT">Good social media marketing examples are usually just talking about ad budget</a></li>
-  <li><a href="#"></a></li>
-  <li><a href="#"></a></li>
 </ul>
 
 <h4>Business Theory and Practice</h4>
@@ -66,7 +64,6 @@ Past GB articles</h3>
   <li><a href="https://medium.com/@georgebaily/reality-check-for-the-robot-revolution-1913f8d439c4#.26enub6t0">Reality Check for the Robot Revolution</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/hK4fb3JGtxR">Open source dissolving businesses</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/8jkS3kx3teK">Digital brain blur examples</a></li>
-  <li><a href="#"></a></li>
 </ul>
 
 <h4>Satire</h4>
@@ -88,7 +85,6 @@ Past GB articles</h3>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/hq1atpvRcgq">Internet marketing client/provider expectations</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/QEax71SvoX4">Facebook: with apologies to George Herbert</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/RmKYzR5iJPH">LGBTSUAVvP3!n/a</a></li>
-  <li><a href="#"></a></li>
 </ul>
 
 <h4>China</h4>
@@ -96,9 +92,9 @@ Past GB articles</h3>
   <li><a href="https://medium.com/@georgebaily/chinese-new-years-eve-tomb-attendance-f55e21aee213#.xuxrcttp5">Chinese New Year’s Eve Tomb Attendance</a></li>
   <li><a href="https://medium.com/@georgebaily/the-top-10-most-dangerous-chinese-home-fireworks-fba533a1e3f7#.e8dn6n8ro">The Top 10 Most Dangerous Chinese Home Fireworks</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/4Lh65KAfPA1">5 things I'd not previously realized about China's "Great Cannon" DDoS attack system</a></li>
-  <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/PcnFHN7wxNp">Mind-mapping all the different businesses under Alibaba</a></li>
+  <li><a href="https://knowledgepower.com/resources/Alibaba_Business_Parts_mind_map_20140514.html">Mind-mapping all the different businesses under Alibaba</a>
+  <br/><a href="https://knowledgepower.com/resources/Tencent_mind_map_20140514.html">...and Tencent</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/9GaLjMXG6jv">Infographic: 3rd Plenum of the 18th Central Committee of the CCP</a></li>
-  <li><a href="#"></a></li>
 </ul>
 
 <h4>Comment / thought / rant</h4>
@@ -112,9 +108,6 @@ Past GB articles</h3>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/iQ11Unr3U8s">Demonstrating/protesting in the streets, or public acts of resistance: there are three dimensions involved</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/Zk1JojgoV5d">Academic course design</a></li>
   <li><a href="https://plus.google.com/u/0/+GeorgeBaily/posts/75MeZLNk48H">Most investment advice goes like this:</a></li>
-  <li><a href="#"></a></li>
-  <li><a href="#"></a></li>
-
 </ul>
 
 <h4>Odyssey Edge</h4>
@@ -134,23 +127,81 @@ Past GB articles</h3>
 <h3>
 <a id="kp" class="anchor" href="#kp" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 KnowledgePower articles</h3>
+<p>KnowledgePower was a digital marketing agency I worked in, and spent probably too much time writing interesting stuff for:</p>
 
 <h4>Marketing theory</h4>
 <ul>
-  <li><a href="#"></a></li>
+  <li><a href="https://knowledgepower.com/pg/where-do-websites-get-traffic-from-spoiler-not-magic/">Where Do Websites Get Traffic From? [Spoiler: not magic]</a></li>
+  <li><a href="https://knowledgepower.com/pg/rule-1-of-all-marketing/">Rule 1 of All Marketing</a></li>
+  <li><a href="https://knowledgepower.com/pg/5-progress-areas-for-your-website-and-online-marketing/">5 Progress Areas for Your Website and Online Marketing</a></li>
+  <li><a href="https://knowledgepower.com/pg/marketing-strategy-reset/">Marketing Strategy Reset</a></li>
 </ul>
 
-<h4>Misc</h4>
+<h4>Digital Marketing Strategy</h4>
 <ul>
-  <li><a href="#"></a></li>
+  <li><a href="https://knowledgepower.com/pg/where-do-websites-get-traffic-from-spoiler-not-magic/">Where Do Websites Get Traffic From? [Spoiler: not magic]</a></li>  
+  <li><a href="https://knowledgepower.com/strategy-focus/">Interactive digital marketing channels strategy guide</a></li>
+  <li><a href="https://knowledgepower.com/pg/plan-on-your-launch-or-startup-being-less-efficient/">Plan On Your Launch/Startup Being LESS Efficient</a></li>
+  <li><a href="https://knowledgepower.com/pg/seo-vs-ppc-explained-in-10-star-wars-images/">SEO vs PPC explained in 10 Star Wars images</a></li>
+  <li><a href="https://knowledgepower.com/pg/when-should-digital-marketing-be-diy-marketing/">When Should Digital Marketing Be DIY Marketing?</a></li>
+  <li><a href="https://knowledgepower.com/pg/pros-and-cons-of-agencies-for-pay-per-click/">Pros and Cons of Agencies for Pay-per-Click</a></li>
+  <li><a href="10 Areas for Pay-per-Click Improvement">https://knowledgepower.com/pg/10-areas-for-pay-per-click-improvement/</a></li>
+  <li><a href="https://knowledgepower.com/pg/website-content-resource-planning/">Website Content Publishing Resource Planning</a></li>
+  <li><a href="https://knowledgepower.com/pg/in-2016-what-is-ecommerce/">In 2016, What Is Ecommerce?</a></li>
+  <li><a href="5 Ways Web Designers Are Often Bad For Marketing">https://knowledgepower.com/pg/5-ways-web-designers-often-bad-marketing/</a></li>
+  <li><a href="https://knowledgepower.com/pg/5-pairs-of-new-years-resolutions-for-business-in-2016/">New Year’s Resolutions for Balanced Marketing Strategy (2016)</a></li>
 </ul>
+
+<h4>Digital Marketing Resources</h4>
+<ul>
+  <li><a href="https://docs.google.com/document/d/1QZDYcmcrhWbs-Xu_cK9q7qcuKrtliCEEYWGLapy9gJY/edit#">Digital Marketing Jargon Guide</a></li>
+  <li><a href="https://knowledgepower.com/pg/mobile-friendly-websites-and-seo/">Advice about making your site more Mobile-Friendly</a></li>
+  <li><a href="https://knowledgepower.com/pg/not-receiving-customer-emails-from-a-wordpress-site/">Not Receiving Customer Emails from a WordPress Site?</a></li>
+  <li><a href="Password Managers">https://knowledgepower.com/pg/password-managers/</a></li>
+  <li><a href="https://knowledgepower.com/pg/switching-your-business-website-into-wordpress/">Switching Your Business Website Into WordPress</a></li>
+  <li><a href="https://knowledgepower.com/pg/analytics-can-tell-cant/">What Analytics Can Tell You… And What It Can’t</a></li>
+  <li><a href="https://knowledgepower.com/pg/10-things-to-track-in-simple-landing-pages/">Analytics: What Do You Track In Single Landing Page Promotions?</a></li>
+  <li><a href="https://knowledgepower.com/pg/top-ten-adwords-mistakes/">Top Ten AdWords Mistakes</a></li>
+  <li><a href="https://knowledgepower.com/resources/10_Things_Commonly_Done_Wrong_In_Google_AdWords_-_KnowledgePower_v20151109.pdf"> "10 Things Commonly Done Wrong In Google AdWords" (PDF)</a></li>
+</ul>
+
+<h4>Research</h4>
+<ul>
+  <li><a href="https://knowledgepower.com/pg/easy-website-basics-to-improve-examples-from-local-accountants-websites/">Easy Website Basics To Improve: Examples from local accountants’ websites…</a>
+  <br/> + <a href="https://docs.google.com/document/d/1NKvKVZEIv2jU53YIDfLUSwR8mx9pvPQPGQZ_NfJWvnk/edit?usp=sharing">swipe-sheet of recommendations for auditing/improving any local business website</a></li>
+  <li><a href="https://knowledgepower.com/pg/2015-world-consumer-brands-graphic/">2015 World Consumer Brands Graphic</a></li>
+  <li><a href="https://knowledgepower.com/pg/cyber-security-firms-y-u-no-https/">Cyber Security Firms – y u no https!!!</a></li>
+  <li><a href="https://knowledgepower.com/pg/google-trends-digital-marketing-in-context/">Google Trends: Search Volume Helps Put Keywords In Context</a></li>
+  </ul>
+  
+<h4>Satire</h4>
+<ul>  
+    <li><a href="https://knowledgepower.com/pg/knowledgepower-digital-projects-currently-in-the-works/">KnowledgePower Digital Projects Currently In The Works…</a></li>
+  <li><a href="https://knowledgepower.com/pg/how-not-to-launch-your-blog/">How Not To Launch Your Blog</a></li>
+  <li><a href="https://knowledgepower.com/pg/occupational-surnames-for-the-digital-age/">Occupational Surnames For The Digital Age</a></li>
+  <li><a href="https://knowledgepower.com/pg/things-data-driven/">Things that are “data driven”</a></li>
+  <li><a href="https://knowledgepower.com/pg/clickbait-tweets-ending-heres-how-heres-why/">Clickbait Tweets ending “Here’s how” or “Here’s why”</a></li>
+  <li><a href="https://knowledgepower.com/pg/what-are-we-passionate-about/">What Are We Passionate About Recently?</a></li>
+  <li><a href="https://knowledgepower.com/annoying-marketing-jargon/">Collection of annoying marketing jargon</a></li>
+</ul>
+
+<h4>Misc commentary / opinion</h4>
+<ul>
+  <li><a href="https://knowledgepower.com/pg/strategy-for-hiring-talent-3-motivations-model-for-employers-and-employees/">Strategy for Hiring Talent: 3-Motivations Model for Employers and Employees</a></li>
+  <li><a href="https://knowledgepower.com/pg/agile-recruitment-process/">Agile Recruitment Process</a></li>
+  <li><a href="https://knowledgepower.com/pg/2-things-need-better-display-advertising-relevance/">2 Things We Need For Better Display Advertising Relevance</a></li>
+</ul>
+
+<!--
+  <li><a href="#"></a></li>
+-->
 
 <h3>
 <a id="links" class="anchor" href="#links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 Links</h3>
 <ul>
   <li><a href="https://twitter.com/georgebaily">@georgebaily on Twitter</a></li>
-  <li><a href="https://www.georgebaily.com/singularity-news/">Singularity news</a></li>
+  <li><a href="https://www.georgebaily.com/singularity-news/">Singularity news</a> (not currently mobile friendly)</li>
   <li><a href="https://medium.com/@georgebaily/">Various past articles published on Medium</a></li>
 
 </ul>
