nav to team leader maxims

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <span aria-hidden="true" class="octicon octicon-link"></span></a>
   Recent</h3>
 
-<p><a href="https://georgebaily.github.io/good-web-page-commandments.html">10 Commandments of Good Commercial Web Pages</a> (2016 09 04)</p>
+  <p><a href="https://georgebaily.github.io/team-leader-maxims.html">Team Leader Maxims</a> (2016 09 04, work in progress)</p>
+<p><a href="https://georgebaily.github.io/good-web-page-commandments.html">10 Commandments of Good Commercial Web Pages</a> (2016 08 21)</p>
 <hr />
 <h3>
 <a id="older" class="anchor" href="#older" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
