--- a/team-leader-maxims.html
+++ b/team-leader-maxims.html
@@ -24,7 +24,7 @@
 		<p>Protect active specialists from distraction or confusion arising from politics, non-matching work requests, or inappropriate sucking into strategic level debates which they can't affect (and so would just be a source of stress)</p>
 		<p>A subset of this is "firewall the insanity", where other departments or management are a source of antipatterns, delusion, or <a href="#faff">faff</a></p>
 		
-      <h3 id="two">Translate/h3>
+      <h3 id="two">Translate</h3>
 		<p>The other side of the firewall job: let stuff through. But add value by adding detail, context, clarity, planning, scope etc so people can act on it easier.</p>
 		<p>This also works upwards, by wrapping team member requests, whinging, etc into management speak, business cases etc</p>
 		
