new entries x4 from LinkedIn articles

--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="recent" class="anchor" href="#recent" aria-hidden="true">
-  <span aria-hidden="true" class="octicon octicon-link"></span></a>
-  Recent</h3>
+      <h3><a id="recent" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent</h3>
 
-  <p><a href="https://georgebaily.github.io/team-leader-maxims.html">Team Leader Maxims</a> (2016 09 04, work in progress)</p>
-<p><a href="https://georgebaily.github.io/good-web-page-commandments.html">10 Commandments of Good Commercial Web Pages</a> (2016 08 21)</p>
+<p><a href="https://www.linkedin.com/pulse/crossing-chasm-4-principles-positioning-george-baily/">Crossing the Chasm: 4 principles of positioning</a></p>
+<p><a href="https://www.linkedin.com/pulse/what-real-marketing-strategy-looks-like-george-baily/">What A Real Marketing Strategy Looks Like</a></p>
+<p><a href="https://www.linkedin.com/pulse/george-c-marshall-effective-leadership-george-baily/">George C. Marshall on effective leadership</a></p>
+
 <hr />
-<h3>
-<a id="older" class="anchor" href="#older" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+<h3><a id="older" class="anchor" href="#older" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 Past GB articles</h3>
 
 <h4>On Tags and Hashtags</h4>
@@ -38,6 +36,8 @@ Past GB articles</h3>
 
 <h4>Marketing Theory and Practice</h4>
 <ul>
+  <li><a href="https://www.linkedin.com/pulse/how-have-better-website-critique-conversations-george-baily/">How to have better website critique conversations</a></li>
+  <li><a href="https://georgebaily.github.io/good-web-page-commandments.html">10 Commandments of Good Commercial Web Pages</a> (2016 08 21)</li>
   <li><a href="https://medium.com/i-m-h-o/rule-2-of-all-marketing-5964782d6f6a#.d9dt13edd">Rule 2 of All Marketing</a></li>
   <li><a href="https://medium.com/@georgebaily/12-uncomfortable-contradictions-of-seo-95e845e27370#.8i5tewgg6">12 Uncomfortable Contradictions of SEO </a></li>
   <li><a href="https://medium.com/@georgebaily/advice-for-staff-member-assigned-to-content-marketing-for-a-startup-with-zero-budget-83e422786d67#.r89dkpev1">Advice for Staff Member Assigned to Content Marketing for a Startup with Zero Budget</a></li>
@@ -52,6 +52,7 @@ Past GB articles</h3>
 
 <h4>Business Theory and Practice</h4>
 <ul>
+  <li><a href="https://georgebaily.github.io/team-leader-maxims.html">Team Leader Maxims</a> (2016 09 04)</li>
   <li><a href="https://medium.com/@georgebaily/a-checklist-of-11-business-strategy-points-derived-from-11-rules-for-creating-value-in-the-social-dcbcebf5fb7#.2kf73qjmk">A Checklist of 11 Business Strategy Points derived from “11 Rules for Creating Value in the Social Era”</a></li>
   <li><a href="https://medium.com/@georgebaily/how-customer-support-done-right-fuels-improvement-throughout-the-business-91c20c29e9ff#.a44pyxlbn">How Customer Support, Done Right, Fuels Improvement Throughout The Business</a></li>
 </ul>
