added link back to social, tweaked title

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">georgebaily on GitHub</h1>
-      <h2 class="project-tagline">George Baily articles etc</h2>
+      <h1 class="project-name">@georgebaily on GitHub</h1>
+      <h2 class="project-tagline">Links to articles written by George Baily</h2>
     </section>
 
     <section class="main-content">
+    <p class="breadcrumb"><a href="https://www.georgebaily.com/social-media.html">&laquo; track down George on social media</a></p>
       <h3><a id="recent" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent</h3>
 
 <p><a href="http://adastra-marketing.com/vision-vs-mission-vs-strategy/">Vision vs Mission vs Strategy (rectifying the names)</a></p>
