added truthiness graphic and attempted style for figure

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <p class="breadcrumb"><a href="https://www.georgebaily.com/social-media.html">&laquo; track down George on social media</a></p>
       <h3><a id="recent" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent</h3>
 
+<figure class="graphic"><a href="https://twitter.com/georgebaily/status/971822331306827776"><img src="https://pbs.twimg.com/media/DXybIyUWsAAVv9k.jpg:large" alt="quadrant on truthiness vs factfulness" /></a></figure>
 <p><a href="http://adastra-marketing.com/vision-vs-mission-vs-strategy/">Vision vs Mission vs Strategy (rectifying the names)</a></p>
 <p><a href="https://www.linkedin.com/pulse/crossing-chasm-4-principles-positioning-george-baily/">Crossing the Chasm: 4 principles of positioning</a></p>
 <p><a href="https://www.linkedin.com/pulse/what-real-marketing-strategy-looks-like-george-baily/">What A Real Marketing Strategy Looks Like</a></p>
