add better initial title

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
 
     <section class="main-content">
     <p class="breadcrumb"><a href="https://www.georgebaily.com/social-media.html">&laquo; track down George on social media</a></p>
-      <h3><a id="recent" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent</h3>
+      <h3><a id="recent-graphics" class="anchor" href="#recent-graphics" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent explanatory graphics</h3>
 
 <figure class="graphic"><a href="https://twitter.com/georgebaily/status/975869369828937734"><img src="https://pbs.twimg.com/media/DYr8AJ0WkAIB3gt.jpg:large" alt="Updated map of website roles and responsibilities - who owns each of these things in your org?" /></a></figure>
 <figure class="graphic"><a href="https://twitter.com/georgebaily/status/966069933439365128"><img src="https://pbs.twimg.com/media/DWgrd9iWsAMQVup.jpg:large" alt="The quality-price inflection point." /></a></figure>
 <figure class="graphic"><a href="https://twitter.com/georgebaily/status/975870348867588096"><img src="https://pbs.twimg.com/media/DYr8zsnX0AAneAH.jpg:large" alt="Getting mileage out of that (expensive) glossy video shoot" /></a></figure>
 <figure class="graphic"><a href="https://twitter.com/georgebaily/status/975870666909024256"><img src="https://pbs.twimg.com/media/DYr9Kz4XUAEnZik.jpg:large" alt="Agile change acceptance" /></a></figure>
 <figure class="graphic"><a href="https://twitter.com/georgebaily/status/971822331306827776"><img src="https://pbs.twimg.com/media/DXybIyUWsAAVv9k.jpg:large" alt="quadrant on truthiness vs factfulness" /></a></figure>
+
+      <h3><a id="recent" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent writing</h3>
 <p><a href="http://adastra-marketing.com/vision-vs-mission-vs-strategy/">Vision vs Mission vs Strategy (rectifying the names)</a></p>
 <p><a href="https://www.linkedin.com/pulse/crossing-chasm-4-principles-positioning-george-baily/">Crossing the Chasm: 4 principles of positioning</a></p>
 <p><a href="https://www.linkedin.com/pulse/what-real-marketing-strategy-looks-like-george-baily/">What A Real Marketing Strategy Looks Like</a></p>
