--- a/empty-page.html
+++ b/empty-page.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-gb">
   <head>
     <meta charset="UTF-8">
     <title>georgebaily on GitHub by georgebaily</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/overrides.css" media="screen">
@@ -32,7 +32,7 @@
 	  <li><a href="#"></li>
 	</ul>
 
-	
+
 
       <footer class="site-footer">
 
@@ -41,6 +41,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
